--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MUSIC",
+  "name": "Mvvmc",
   "version": "15.3.0",
   "description": "discord.js v14.7 music bot. for slash commands",
   "main": "index.js",
